--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
     font-family:Arial, Helvetica, sans-serif;
 }
 :root {
-    --bg-color: #080808;
-    --second-bg-color: #131313;
-    --text-color: white;
-    --main-color:#af0000;
+    --bg-color: #fff;
+    --second-bg-color: #ffc632;
+    --text-color: #131313;
+    --main-color:#800000;
 }
 html{
     font-size: 60%;
@@ -22,6 +22,9 @@ html{
 body{
     background: var(--bg-color);
     color: var(--text-color);
+}
+span{
+    color: var(--main-color);
 }
 .heading{
     font-size: 8rem;
@@ -40,16 +43,19 @@ body{
     left: 0;
     width: 100%;
     padding: 4rem 12% 4rem;
-    background: rgba(0,0,0,0.3);
+    background: var(--main-color);
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-between;
     align-items:center;
     z-index:5;
 }
+.header span{
+    color: var(--second-bg-color);
+}
 .logo{
     font-size: 3rem;
-    color:var(--text-color);
+    color: var(--bg-color);
     font-weight: 800;
     cursor: pointer;
     transition: 0.3s ease;;
@@ -62,7 +68,7 @@ body{
 }
 .navbar a{
     font-size: 1.8rem;
-    color: var(--text-color);
+    color: var(--bg-color);
     margin-left: 4rem;
     font-weight: 500;
     transition: 0.3s ease-in-out;
@@ -98,64 +104,6 @@ section{
     justify-content: center;
     margin-top: 3rem;
 }
-span{
-    color: var(--main-color);
-}
-.logo span{
-    color: var(--main-color);
-}
-.home-content h3{
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    font-size: 3.5rem;
-}
-.home-content h1{
-    font-size:7rem;
-    font-weight: 700;
-    margin-top: 1.5rem;
-    line-height: 1;
-}
-.home-content p{
-    font-size: 2.25rem;
-    font-weight: 500;
-    line-height: 1.8;
-    max-width: 10000px;
-}
-.btn{
-    display: inline-block;
-    padding: 1rem 2.8rem;
-    background: var(--main-color);
-    box-shadow: 0 0 25px var(--main-color);
-    border-radius: 4rem;
-    font-size: 1.6rem;
-    color: var(--bg-color);
-    border: 2px solid transparent;
-    letter-spacing: 0.1rem;
-    font-weight: 600;
-    transition: 0.3s ease-in-out;
-    cursor:pointer;
-    margin-top: 25px;
-}
-.btn:hover{
-    transform:scale(1.05);
-    box-shadow: 0 0 50px var(--main-color);
-}
-.btn-group{
-    display: flex;
-    align-items: center;
-    gap:1.5rem;
-}
-.btn-group a:nth-of-type(2){
-    background-color: var(--bg-color);
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
-    box-shadow: 0 0 25px transparent;
-}
-.btn-group a:nth-of-type(2):hover{
-    box-shadow: 0 0 25px var(--main-color);
-    background-color: var(--main-color);
-    color: var(--bg-color);
-}
 /* Footer */
 .footer{
     position: relative;
@@ -165,11 +113,10 @@ span{
     background-color: var(--second-bg-color);
 }
 .footer ul{
-    margin-top: 0;
+    margin: 0;
     padding: 0;
     font-size: 18px;
     line-height: 1.6;
-    margin-bottom: 0;
     text-align: center;
 }
 .footer ul li a{
@@ -186,7 +133,7 @@ span{
     padding: 0 15px;
 }
 .footer .copyright{
-    margin-top: 50px;
+    margin-top: 20px;
     text-align: center;
     font-size: 16px;
     color: var(--text-color);
