--- a/style.css
+++ b/style.css
@@ -62,9 +62,10 @@ span{
 }
 .logo:hover{
     transform:scale(1.1);
+    text-shadow: 0 0 25px var(--second-bg-color);
 }
 .logo span{
-    text-shadow: 0 0 25px var(--main-color);
+    text-shadow: 0 0 25px var(--second-bg-color);
 }
 .navbar a{
     font-size: 1.8rem;
@@ -76,8 +77,8 @@ span{
 }
 .navbar a:hover,
 .navbar a.active{
-    color: var(--main-color);
-    border-bottom: 3px solid var(--main-color);
+    color: var(--second-bg-color);
+    border-bottom: 3px solid var(--second-bg-color);
 
 }
 #menu-icon{
