--- a/style.css
+++ b/style.css
@@ -79,7 +79,10 @@ span{
 .navbar a.active{
     color: var(--second-bg-color);
     border-bottom: 3px solid var(--second-bg-color);
-
+}
+.active{
+    color: var(--second-bg-color);
+    border-bottom: 3px solid var(--second-bg-color);
 }
 #menu-icon{
     font-size: 3.6rem;
@@ -105,6 +108,21 @@ section{
     justify-content: center;
     margin-top: 3rem;
 }
+/* Library Browsing */
+.library{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15rem;
+}
+.home-content{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    text-align: left;
+    justify-content: center;
+    margin-top: 3rem;
+}
 /* Footer */
 .footer{
     position: relative;
@@ -113,25 +131,11 @@ section{
     padding: 40px 0;
     background-color: var(--second-bg-color);
 }
-.footer ul{
-    margin: 0;
-    padding: 0;
-    font-size: 18px;
-    line-height: 1.6;
+.footer .copyright{
+    margin-top: 20px;
     text-align: center;
-}
-.footer ul li a{
+    font-size: 16px;
     color: var(--text-color);
-    border-bottom: 3px solid transparent;
-    transition: 0.3s ease-in-out;
-}
-.footer ul li a:hover{
-    border-bottom: 3px solid var(--main-color);
-    color: var(--main-color);
-}
-.footer ul li{
-    display: inline-block;
-    padding: 0 15px;
 }
 .footer .copyright{
     margin-top: 20px;
