--- a/style.css
+++ b/style.css
@@ -74,11 +74,20 @@ span{
     font-weight: 500;
     transition: 0.3s ease-in-out;
     border-bottom: 3px solid transparent;
+    overflow: hidden;
 }
 .navbar a:hover,
 .navbar a.active{
     color: var(--second-bg-color);
     border-bottom: 3px solid var(--second-bg-color);
+}
+.navbar input[type=text]{
+    float: right;
+    padding: 3px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
 }
 .active{
     color: var(--second-bg-color);
@@ -93,7 +102,12 @@ section{
     min-height: 100vh;
     padding: 10rem 12% 10rem;
 }
-/* Home */
+/* Log In Page */ 
+.log-in{
+    margin-top: 100px;
+    font-size: 3rem;
+}
+/* Home Page */
 .home{
     display: flex;
     align-items: center;
@@ -114,8 +128,25 @@ section{
     align-items: center;
     justify-content: center;
     gap: 15rem;
+    padding: 100px 15px;
+    background: var(--second-bg-color);
 }
-.home-content{
+.library-content{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    text-align: left;
+    justify-content: center;
+    margin-top: 3rem;
+}
+/* Search */
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15rem;
+}
+.search-content{
     display: flex;
     flex-direction: column;
     align-items: baseline;
