--- a/style.css
+++ b/style.css
@@ -248,18 +248,19 @@ figure img:hover{
     position: relative;
     bottom: 0;
     width: 100%;
-    padding: 40px 0;
+    padding: 10px 0;
     background-color: var(--second-bg-color);
 }
 .footer .copyright{
-    margin-top: 20px;
+    padding-top: 5px;
     text-align: center;
     font-size: 16px;
     color: var(--text-color);
 }
-.footer .copyright{
-    margin-top: 20px;
-    text-align: center;
-    font-size: 16px;
+.footer span{
     color: var(--text-color);
+}
+.footer span:hover{
+    color: var(--main-color);
+    text-shadow: 0 0 25px var(--main-color);
 }
