--- a/style.css
+++ b/style.css
@@ -87,13 +87,40 @@ span{
     border-bottom: 3px solid var(--second-bg-color);
     text-shadow: 0 0 25px var(--second-bg-color);
 }
-.navbar input[type=text]{
-    float: right;
-    padding: 3px;
+.search-bar{
+    border-radius: 45px;
+    padding: 5px 7px;
+}
+.bx-search-alt{
+    color: var(--bg-color);
+    flex: left;
+    padding: 10px;
+    border-radius: 60%;
+    transition: 0.3s;
+    border: 1px solid var(--bg-color);
+}
+.Input{
     border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px;
+    background: none;
+    outline: none;
+    color: var(--main-color);
+    font-size: 18px;
+    transition: 0.3s;
+    width: 0;
+}
+.search-bar:hover > .Input{
+    width: 200px;
+    padding: 5px;
+}
+.search-bar:hover{
+    background: var(--bg-color);
+    box-shadow: 0 0 25px var(--second-bg-color);
+    backdrop-filter: blur(0.6px);
+}
+@media screen and (max-width:720px){
+    .search-bar:hover{
+        width: 70%;
+    }
 }
 .active{
     color: var(--second-bg-color);
