--- a/style.css
+++ b/style.css
@@ -72,6 +72,15 @@ span{
 .logo span{
     text-shadow: 0 0 25px var(--second-bg-color);
 }
+.nav-container {
+    display: flex;
+    align-items: center;
+}
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .navbar a{
     font-size: 2rem;
     color: var(--bg-color);
@@ -90,6 +99,7 @@ span{
 .search-bar{
     border-radius: 45px;
     padding: 5px 7px;
+    margin-left: 20px;
 }
 .bx-search-alt{
     color: var(--bg-color);
@@ -97,6 +107,7 @@ span{
     padding: 10px;
     border-radius: 60%;
     transition: 0.3s;
+    background-color: var(--main-color);
     border: 1px solid var(--bg-color);
 }
 .Input{
@@ -111,6 +122,11 @@ span{
 .search-bar:hover > .Input{
     width: 200px;
     padding: 5px;
+}
+.search-bar:hover > .bx-search-alt{
+    background-color: var(--main-color);
+    color: var(--second-bg-color);
+    border: 1px solid var(--second-bg-color);
 }
 .search-bar:hover{
     background: var(--bg-color);
@@ -157,6 +173,7 @@ section{
 .log-in .btn:hover{
     transform:scale(1.05);
     box-shadow: 0 0 50px var(--main-color);
+    color: var(--second-bg-color);
 }
 .log-in .input-box{
     display: flex;
