--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ span{
     top:0;
     left: 0;
     width: 100%;
-    padding: 1rem 6% 1rem;
+    padding: 1rem 1% 1rem;
     background: var(--main-color);
     backdrop-filter: blur(10px);
     display: flex;
@@ -96,9 +96,10 @@ span{
     border-bottom: 3px solid var(--second-bg-color);
 }
 .search-bar{
-    border-radius: 45px;
-    padding: 5px 7px;
+    border-radius: 20px;
+    padding: 10px 15px;
     margin-left: 20px;
+    display: flex;
 }
 .bx-search-alt{
     color: var(--bg-color);
@@ -119,8 +120,7 @@ span{
     width: 0;
 }
 .search-bar:hover > .Input{
-    width: 200px;
-    padding: 5px;
+    width: 150px;
 }
 .search-bar:hover > .bx-search-alt{
     background-color: var(--main-color);
@@ -307,3 +307,71 @@ figure img:hover{
     color: var(--main-color);
     text-shadow: 0 0 25px var(--main-color);
 }
+/* For General Responsiveness */
+@media only screen and (max-width: 768px) {
+    .header {
+      padding: 1rem 4% 1rem;
+    }
+    .navbar a {
+      font-size: 1.5rem;
+      margin-left: 2rem;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .header {
+      padding: 0.5rem 3% 0.5rem;
+    }
+    .navbar a {
+      font-size: 1.2rem;
+      margin-left: 1.5rem;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .search-bar {
+      width: 80%;
+    }
+    .header {
+        padding: 0.2rem 2% 0.2rem; /* decreased padding for smaller screens */
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .search-bar {
+      width: 100%;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .home, .library, .search {
+      flex-direction: column;
+      gap: 10rem;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .home, .library, .search {
+      flex-direction: column;
+      gap: 5rem;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    figure {
+      width: 50%;
+      height: 300px;
+    }
+    figure img {
+      width: 50%;
+      height: 300px;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    figure {
+      width: 100%;
+      height: 250px;
+    }
+    figure img {
+      width: 100%;
+      height: 250px;
+    }
+  }
