--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ span{
 }
 .logo:hover{
     transform:scale(1.1);
+    padding-left: 30px;
     text-shadow: 0 0 25px var(--second-bg-color);
 }
 .logo span{
