--- a/style.css
+++ b/style.css
@@ -153,7 +153,13 @@ section{
 }
 /* Log In Page */ 
 .log-in{
-    margin-top: 100px;
+    margin-top: 0;
+    height: 100vh;
+    padding: 20px;
+    flex-direction: row;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 .log-in .btn{
     display: inline-block;
@@ -179,6 +185,9 @@ section{
     display: flex;
     justify-content: center;
     flex-wrap:wrap;
+    flex: 1;
+    float: left;
+    margin-bottom: 20px; 
 }
 .log-in .input-box input{
     width: 100%;
@@ -191,6 +200,44 @@ section{
     margin:1.5rem 0;
     resize: none;
     box-shadow: 0 0 10px var(--main-color);
+}
+.img-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px
+}
+.log-in .img{
+    float: right;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    text-align: center; 
+}
+.log-in .img img{
+    width: 300px;
+    height: auto;
+    max-height: 300px;
+    border-radius: 10px;
+    object-fit: cover; 
+    transition: transform 0.5s; 
+    animation: 2s ease-out;
+}
+.log-in .img img:hover{
+    animation: spin 2s linear infinite; 
+    scale: 1.2;
+    transition-duration: 0.5s;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.log-in .img .bypass-btn {
+    width: 100%; /* make the button full-width */
+    text-align: center;
 }
 /* Home Page */
 .home{
