--- a/style.css
+++ b/style.css
@@ -36,6 +36,21 @@ span{
     text-decoration: underline var(--main-color);
     color: var(--main-color);
 }
+/* Animation Entry */
+.animate-in {
+    animation: animate-in 1s;
+  }
+  
+  @keyframes animate-in {
+    0% {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 /* Header */
 .header{
     position:fixed;
