--- a/style.css
+++ b/style.css
@@ -169,12 +169,16 @@ section{
 /* Log In Page */ 
 .log-in{
     margin-top: 0;
-    height: 155vh;
+    height: 100vh;
     padding: 20px;
     flex-direction: row;
     align-items: center;
     display: flex;
     justify-content: center;
+    margin-top: 20px;
+}
+.log-in .login-wrapper{
+    padding-top: 50px;
 }
 .log-in .btn{
     display: inline-block;
@@ -236,6 +240,7 @@ section{
     object-fit: cover; 
     transition: transform 0.5s; 
     animation: 2s ease-out;
+    margin: 0 auto; 
 }
 .log-in .img img:hover{
     animation: spin 2s linear infinite; 
