--- a/style.css
+++ b/style.css
@@ -259,25 +259,10 @@ section{
     width: 50%; /* make the button full-width */
     text-align: center;
 }
-/* Home Page */
-.home{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15rem;
-}
-.home-content{
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    text-align: left;
-    justify-content: center;
-    margin-top: 3rem;
-}
 /* Cervantes */
 /* Library Browsing */
 .library{
-    background-color: var(--second-bg-color);
+    background-color: var(--bg-color);
     font-size: 25px;
     text-align: center;
     color:#C10206;
