--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ section{
     flex: 1;
     float: left;
     margin-bottom: 20px; 
+    padding-top: 40px;
 }
 .log-in .input-box input{
     width: 100%;
