--- a/style.css
+++ b/style.css
@@ -201,6 +201,11 @@ section{
     box-shadow: 0 0 50px var(--main-color);
     color: var(--second-bg-color);
 }
+.log-in .log-header{
+    font-size: 3.5rem;
+    color: var(--main-color);
+    padding-bottom: 30px;
+}
 .log-in .input-box{
     display: flex;
     justify-content: center;
@@ -208,10 +213,10 @@ section{
     flex: 1;
     float: left;
     margin-bottom: 20px; 
-    padding-top: 40px;
+    padding-top: 30px;
 }
 .log-in .input-box input{
-    width: 100%;
+    width: 90%;
     padding: 2.5rem;
     font-size: 1.8rem;
     color: var(--text-color);
