--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ section{
     transition: 0.3s ease-in-out;
     cursor:pointer;
     margin-top: 2rem;
+    padding-top: 10px;
 }
 .log-in .btn:hover{
     transform:scale(1.05);
@@ -204,7 +205,7 @@ section{
 .log-in .log-header{
     font-size: 3.5rem;
     color: var(--main-color);
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 .log-in .input-box{
     display: flex;
