--- a/style.css
+++ b/style.css
@@ -191,11 +191,6 @@ span{
     box-shadow: 0 0 25px var(--second-bg-color);
     backdrop-filter: blur(0.6px);
 }
-@media screen and (max-width:720px){
-    .search-bar:hover{
-        width: 70%;
-    }
-}
 .active{
     color: var(--second-bg-color);
     border-bottom: 3px solid var(--second-bg-color);
@@ -428,12 +423,26 @@ figure img:hover{
 }
 /* For General Responsiveness */
 @media only screen and (max-width: 768px) {
+    .logo{
+        font-size: 1.5rem;
+    }
     .header {
-      padding: 1rem 4% 1rem;
+        padding: 1rem 4% 1rem;
     }
     .navbar a {
-      font-size: 1.5rem;
-      margin-left: 2rem;
+        font-size: 1.3rem;
+        margin-left: 2rem;
+    }
+    .search-bar:hover{
+        width: 100px;
+        height: 3rem;
+        font-size: 1.3rem;
+    }
+    .search-bar:hover > .bx-search-alt{
+        transform: translateX(300px);
+    }
+    .Input{
+        font-size: 1rem;
     }
 } 
  @media only screen and (max-width: 480px) {
