--- a/style.css
+++ b/style.css
@@ -444,6 +444,17 @@ figure img:hover{
     .Input{
         font-size: 1rem;
     }
+    .log-in{
+        height: 150vh;
+    }
+    .log-in .img{
+        align-items: center;
+        align-self: center;
+        float: none;
+    }
+    .log-in img{
+        width: 50px;
+    }
 } 
  @media only screen and (max-width: 480px) {
     .header {
