--- a/style.css
+++ b/style.css
@@ -206,7 +206,6 @@ section{
 }
 /* Log In Page */ 
 .log-in{
-    margin-top: 0;
     height: 100vh;
     padding: 20px;
     margin-top: 20px;
@@ -424,7 +423,7 @@ figure img:hover{
 /* For General Responsiveness */
 @media only screen and (max-width: 768px) {
     .logo{
-        font-size: 1.5rem;
+        font-size: 200%;
     }
     .header {
         padding: 1rem 4% 1rem;
@@ -445,15 +444,21 @@ figure img:hover{
         font-size: 1rem;
     }
     .log-in{
-        height: 150vh;
+        margin-top: -5px;
+        height: 200vh;
     }
     .log-in .img{
         align-items: center;
         align-self: center;
         float: none;
     }
-    .log-in img{
-        width: 50px;
+    .log-in .img img{
+        width: 50%;
+        height: 175px;
+    }
+    .log-in .input-box{
+        padding-top: 75px;
+        margin-bottom: 0px
     }
 } 
  @media only screen and (max-width: 480px) {
