--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@
     font-family:Arial, Helvetica, sans-serif;
 }
 :root {
-    --bg-color: #fff;
+    --bg-color: #1f1f1f;
     --second-bg-color: #ffc632;
     --text-color: #131313;
+    --second-text-color:#fff;
     --main-color:#800000;
 }
 html{
@@ -78,7 +79,7 @@ span{
     font-weight: 800;
     cursor: pointer;
     transition: 0.3s ease;;
-    color: var(--bg-color);
+    color: var(--second-text-color);
 }
 .logo:hover{
     transform:scale(1.1);
@@ -104,7 +105,7 @@ span{
     margin-left: 4rem;
     font-weight: 500;
     overflow: hidden;
-    color: var(--bg-color);
+    color: var(--second-text-color);
     transition: 0.3s ease-in-out;
     border-bottom: 3px solid transparent;
 
@@ -142,7 +143,7 @@ span{
     display: block;
     text-decoration: none;
     list-style-type: none;
-    color: var(--bg-color);
+    color: var(--second-text-color);
     transition: transform 0.3s ease;
 }
 .dropdown li a:hover {
@@ -165,9 +166,9 @@ span{
     transition: 0.3s;
     border-radius: 60%;
     flex: left;
-    color: var(--bg-color);
+    color: var(--second-text-color);
     background-color: var(--main-color);
-    border: 1px solid var(--bg-color);
+    border: 1px solid var(--second-text-color)
 }
 .Input{
     width: 0;
@@ -187,7 +188,7 @@ span{
     border: 1px solid var(--second-bg-color);
 }
 .search-bar:hover{
-    background: var(--bg-color);
+    background: var(--second-text-color);
     box-shadow: 0 0 25px var(--second-bg-color);
     backdrop-filter: blur(0.6px);
 }
@@ -451,6 +452,7 @@ figure img:hover{
         align-items: center;
         align-self: center;
         float: none;
+
     }
     .log-in .img img{
         width: 50%;
