--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ section{
     display: inline-block;
     border: 2px solid transparent;
     transition: 0.3s ease-in-out;
-    color: var(--bg-color);
+    color: var(--second-text-color);
     background: var(--main-color);
     box-shadow: 0 0 25px var(--main-color);
 }
@@ -261,7 +261,7 @@ section{
     border-radius: 2rem;
     resize: none;
     color: var(--text-color);
-    background: var(--bg-color);
+    background: var(--second-text-color);
     border: 2px solid var(--main-color);
     box-shadow: 0 0 10px var(--main-color);
 }
@@ -327,6 +327,12 @@ section{
     font-size: 25px;
     text-align: center;
     color:#C10206;
+}
+#popular{
+    color: var(--second-text-color);
+}
+#thesis{
+    color: var(--second-text-color);
 }
 /* Front Page Container */
 .container{
