--- a/style.css
+++ b/style.css
@@ -233,17 +233,18 @@ section{
     transition: 0.3s ease-in-out;
     color: var(--second-text-color);
     background: var(--main-color);
-    box-shadow: 0 0 25px var(--main-color);
+    box-shadow: 0 0 5px var(--second-bg-color);
 }
 .log-in .btn:hover{
     transform:scale(1.05);
-    box-shadow: 0 0 50px var(--main-color);
-    color: var(--second-bg-color);
+    background: var(--second-bg-color);
+    box-shadow: 0 0 10px var(--main-color);
+    color: var(--main-color);
 }
 .log-in .log-header{
     font-size: 3.5rem;
     padding-bottom: 20px;
-    color: var(--main-color);
+    color: var(--second-text-color);
 }
 .log-in .input-box{
     flex: 1;
@@ -263,8 +264,8 @@ section{
     resize: none;
     color: var(--second-text-color);
     background: var(--third-bg-color);
-    border: 2px solid var(--main-color);
-    box-shadow: 0 0 10px var(--main-color);
+    border: 2px solid var(--second-bg-color);
+    box-shadow: 0 0 10px var(--second-bg-color);
 }
 .img-container {
     margin-bottom: 20px;
