--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@
     font-family:Arial, Helvetica, sans-serif;
 }
 :root {
-    --bg-color: black;
+    --bg-color: #000000;
     --second-bg-color: #ffc632;
-    --third-bg-color: #131313;
     --text-color: #131313;
-    --second-text-color:#fff;
-    --main-color:#800000;
+    --main-color:#C10206;
+    --header-color:#ffff;
 }
 html{
     font-size: 60%;
@@ -80,7 +79,7 @@ span{
     font-weight: 800;
     cursor: pointer;
     transition: 0.3s ease;;
-    color: var(--second-text-color);
+    color: var(--header-color);
 }
 .logo:hover{
     transform:scale(1.1);
@@ -106,11 +105,34 @@ span{
     margin-left: 4rem;
     font-weight: 500;
     overflow: hidden;
-    color: var(--second-text-color);
+    color: var(--header-color);
     transition: 0.3s ease-in-out;
     border-bottom: 3px solid transparent;
 
 }
+@media only screen and (max-width: 1000px) {
+    .navbar a{
+        font-size: 1.5rem;
+        margin-left: 4rem;
+        font-weight: 500;
+        overflow: hidden;
+        color: var(--header-color);
+        transition: 0.3s ease-in-out;
+        border-bottom: 3px solid transparent;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .navbar a{
+        font-size: 1rem;
+        margin-left: 4rem;
+        font-weight: 500;
+        overflow: hidden;
+        color: var(--header-color);
+        transition: 0.3s ease-in-out;
+        border-bottom: 3px solid transparent;
+    }
+  }
 .navbar a:hover,
 .navbar a.active{
     scale: 1.1;
@@ -144,7 +166,7 @@ span{
     display: block;
     text-decoration: none;
     list-style-type: none;
-    color: var(--second-text-color);
+    color: var(--header-color);
     transition: transform 0.3s ease;
 }
 .dropdown li a:hover {
@@ -167,9 +189,9 @@ span{
     transition: 0.3s;
     border-radius: 60%;
     flex: left;
-    color: var(--second-text-color);
+    color: var(--header-color);
     background-color: var(--main-color);
-    border: 1px solid var(--second-text-color)
+    border: 1px solid var(--header-color);
 }
 .Input{
     width: 0;
@@ -189,7 +211,7 @@ span{
     border: 1px solid var(--second-bg-color);
 }
 .search-bar:hover{
-    background: var(--second-text-color);
+    background: var(--header-color);
     box-shadow: 0 0 25px var(--second-bg-color);
     backdrop-filter: blur(0.6px);
 }
@@ -208,6 +230,7 @@ section{
 }
 /* Log In Page */ 
 .log-in{
+    margin-top: 0;
     height: 100vh;
     padding: 20px;
     margin-top: 20px;
@@ -231,20 +254,19 @@ section{
     display: inline-block;
     border: 2px solid transparent;
     transition: 0.3s ease-in-out;
-    color: var(--second-text-color);
+    color: var(--bg-color);
     background: var(--main-color);
-    box-shadow: 0 0 5px var(--second-bg-color);
+    box-shadow: 0 0 25px var(--main-color);
 }
 .log-in .btn:hover{
     transform:scale(1.05);
-    background: var(--second-bg-color);
-    box-shadow: 0 0 10px var(--main-color);
-    color: var(--main-color);
+    box-shadow: 0 0 50px var(--main-color);
+    color: var(--second-bg-color);
 }
 .log-in .log-header{
     font-size: 3.5rem;
     padding-bottom: 20px;
-    color: var(--second-text-color);
+    color: var(--main-color);
 }
 .log-in .input-box{
     flex: 1;
@@ -262,10 +284,10 @@ section{
     font-size: 1.8rem;
     border-radius: 2rem;
     resize: none;
-    color: var(--second-text-color);
-    background: var(--third-bg-color);
-    border: 2px solid var(--second-bg-color);
-    box-shadow: 0 0 10px var(--second-bg-color);
+    color: var(--text-color);
+    background: var(--bg-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 10px var(--main-color);
 }
 .img-container {
     margin-bottom: 20px;
@@ -328,13 +350,7 @@ section{
     background-color: var(--bg-color);
     font-size: 25px;
     text-align: center;
-    color:#C10206;
-}
-#popular{
-    color: var(--second-text-color);
-}
-#thesis{
-    color: var(--second-text-color);
+    color: #fff;
 }
 /* Front Page Container */
 .container{
@@ -414,16 +430,16 @@ figure img:hover{
     bottom: 0;
     width: 100%;
     padding: 10px 0;
-    background-color: var(--second-bg-color);
+    background-color: var(--main-color);
 }
 .footer .copyright{
     padding-top: 5px;
     text-align: center;
     font-size: 16px;
-    color: var(--text-color);
+    color: var(--header-color);
 }
 .footer span{
-    color: var(--text-color);
+    color: var(--header-color);
 }
 .footer span:hover{
     color: var(--main-color);
@@ -432,7 +448,7 @@ figure img:hover{
 /* For General Responsiveness */
 @media only screen and (max-width: 768px) {
     .logo{
-        font-size: 200%;
+        font-size: 1.5rem;
     }
     .header {
         padding: 1rem 4% 1rem;
@@ -451,24 +467,6 @@ figure img:hover{
     }
     .Input{
         font-size: 1rem;
-    }
-    .log-in{
-        margin-top: -5px;
-        height: 200vh;
-    }
-    .log-in .img{
-        align-items: center;
-        align-self: center;
-        float: none;
-
-    }
-    .log-in .img img{
-        width: 50%;
-        height: 175px;
-    }
-    .log-in .input-box{
-        padding-top: 75px;
-        margin-bottom: 0px
     }
 } 
  @media only screen and (max-width: 480px) {
@@ -504,7 +502,5 @@ figure img:hover{
       flex-direction: column;
       gap: 5rem;
     }
-<<<<<<< HEAD
 }
-=======
->>>>>>> 72065afc15061167d8884f51c4e236497df7f865
+
