--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@
 :root {
     --bg-color: #000000;
     --second-bg-color: #ffc632;
+    --third-bg-color: #131313;
     --text-color: #131313;
     --main-color:#C10206;
     --header-color:#ffff;
+    
 }
 html{
     font-size: 60%;
@@ -255,14 +257,15 @@ section{
     display: inline-block;
     border: 2px solid transparent;
     transition: 0.3s ease-in-out;
-    color: var(--bg-color);
+    color: var(--header-color);
     background: var(--main-color);
     box-shadow: 0 0 25px var(--main-color);
 }
 .log-in .btn:hover{
     transform:scale(1.05);
-    box-shadow: 0 0 50px var(--main-color);
-    color: var(--second-bg-color);
+    box-shadow: 0 0 50px var(--second-bg-color);
+    color: var(--main-color);
+    background: var(--second-bg-color);
 }
 .log-in .log-header{
     font-size: 3.5rem;
@@ -285,8 +288,8 @@ section{
     font-size: 1.8rem;
     border-radius: 2rem;
     resize: none;
-    color: var(--text-color);
-    background: var(--bg-color);
+    color: var(--header-color);
+    background: var(--third-bg-color);
     border: 2px solid var(--main-color);
     box-shadow: 0 0 10px var(--main-color);
 }
