--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ section{
     display: inline-block;
     border: 2px solid transparent;
     transition: 0.3s ease-in-out;
-    color: var(--header-color);
+    color: var(--second-bg-color);
     background: var(--main-color);
     box-shadow: 0 0 25px var(--main-color);
 }
@@ -266,6 +266,19 @@ section{
     box-shadow: 0 0 50px var(--second-bg-color);
     color: var(--main-color);
     background: var(--second-bg-color);
+}
+.log-in .bypass-btn {
+    text-align: center;
+    margin-left: 10px;
+    color: var(--main-color);
+    background: var(--second-bg-color);
+    box-shadow: 0 0 25px var(--second-bg-color);
+}
+.log-in .bypass-btn:hover {
+    transform:scale(1.05);
+    box-shadow: 0 0 50px var(--main-color);
+    color: var(--second-bg-color);
+    background: var(--main-color);
 }
 .log-in .log-header{
     font-size: 3.5rem;
@@ -293,33 +306,6 @@ section{
     border: 2px solid var(--main-color);
     box-shadow: 0 0 10px var(--main-color);
 }
-.img-container {
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.log-in .img{
-    margin-left: 20px;
-    margin-bottom: 20px;
-    float: right;
-    text-align: center; 
-}
-.log-in .img img{
-    width: 300px;
-    height: auto;
-    max-height: 300px;
-    border-radius: 10px;
-    object-fit: cover; 
-    transition: transform 0.5s; 
-    animation: 2s ease-out;
-    margin: 0 auto; 
-}
-.log-in .img img:hover{
-    scale: 1.2;
-    transition-duration: 0.5s;
-    animation: spin 2s linear infinite; 
-}
 @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -327,10 +313,6 @@ section{
     100% {
         transform: rotate(360deg);
     }
-}
-.log-in .bypass-btn {
-    text-align: center;
-    margin-left: 10px;
 }
 /* Error */
 .error{
