main color changed

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     --second-bg-color: #ffc632;
     --third-bg-color: #131313;
     --text-color: #131313;
-    --main-color:#C10206;
+    --main-color:#891619;
     --header-color:#ffff;
     
 }
