--- a/style.css
+++ b/style.css
@@ -113,7 +113,8 @@ span{
 }
 .navbar a{
     font-size: 2rem;
-    margin-left: 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     font-weight: 500;
     overflow: hidden;
     color: var(--header-color);
@@ -184,7 +185,7 @@ span{
     width: 91%;
     text-align: center;
     color: var(--main-color);
-    transform: translateX(-3.1rem); 
+    transform: translateX(-1.25rem); 
     background-color: var(--second-bg-color);
     text-shadow: 0 0 25px var(--main-color);
     box-shadow: 0 0 25px var(--second-bg-color);
