--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ span{
     padding: 0;
 }
 .dropdown li a {
-    padding: 10px;    
+    padding: 10px 0px;    
     display: block;
     text-decoration: none;
     list-style-type: none;
